--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ h2 {
   margin-bottom: 50px;
 }
 p {
-  font-family: "sofia-pro", sans-serif;
+  font-family: "sofia-pro-soft", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 1rem;
