--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ textarea {
   box-sizing: border-box;
 }
 html {
-  background-color: #F0F4EF;
+  background-color: #F5F3F0;
   font-size: 16px;
 }
 .red {
@@ -144,7 +144,7 @@ p {
 footer p {
   font-size: .8rem;
   margin: 0;
-  color: #F0F4EF;
+  color: #F5F3F0;
 }
 ul {
   padding: 0;
