--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ html {
   font-size: 16px;
 }
 .red {
-  color: #60695C;
+  color: #676767;
 }
 .yellow {
   color: #FFD042;
@@ -110,7 +110,7 @@ footer {
   width: 100vw;
   text-align: center;
   padding: 15px;
-  background-color: #60695C;
+  background-color: #676767;
 }
 h1 {
   font-size: 3.5rem;
@@ -130,7 +130,7 @@ h2 {
   text-transform: uppercase;
   margin-bottom: 0;
   letter-spacing: 10px;
-  color: #60695C;
+  color: #676767;
   margin-bottom: 50px;
 }
 p {
@@ -139,7 +139,7 @@ p {
   font-style: normal;
   font-size: 1rem;
   line-height: 1.5;
-  color: #60695C;
+  color: #676767;
 }
 footer p {
   font-size: .8rem;
@@ -163,7 +163,7 @@ li {
 }
 a, a:visited, a:active {
   text-decoration: none;
-  border-bottom: solid 3px #60695C;
+  border-bottom: solid 3px #676767;
   transition: border-bottom 1s ease;
 }
 a.blue:hover {
